qtwebkit (2.3.2.dfsg-2) UNRELEASED; urgency=medium

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 03 Sep 2014 09:04:23 -0300

qtwebkit (2.3.2.dfsg-1) unstable; urgency=medium

  [ Andreas Cord-Landwehr ]
  * New upstream release: QtWebKit 2.3 is a backport of QtWebkit for
    Qt 5 to Qt 4 (Closes: #755396)
  * Update patches:
    - remove Fix_build_with_GLib_2.31_changeset_r97269, applied upstream
    - remove upstream_changeset_r93631.diff, applied upstream
    - remove upstream_changeset_r113848.diff, applied upstream 
    - remove upstream_Build-fixes-for-glib-2.31.diff, applied upstream
    - add build fix: upstream_changeset_119798.patch
    - remove 01_lflags_as-needed.diff
      and set --as-needed linker flag, to avoid useless linking, in debian/rules
    - remove stabs_format_debug_info.diff, flags set in debian/rules
    - new patch hide_wtf_symbols.diff, to hide WTF symbols
    - new patch hide_jsc_symbols.diff, to hide JSC symbols
  * Switch to building with ./Tools/Scripts/build-webkit as recommended
    by upstream
  * Build with gstreamer-1.x: (Closes: #756098)
    - bump build dependencies to
      - libgstreamer-plugins-base1.0-dev
      - libgstreamer1.0-dev
    - add patch gstreamer-1.0.diff
  * Add flex and bison build-dependencies
  * Add ruby build-dependency
  * Add libfontconfig build-dependency
  * Add libjpeg build dependency.
  * Bump standards version to 3.9.5, no changes needed
  * Update copyright file.
  * Remove sourceless files from tarball.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Acknowledge previous NMU (thanks Matthias!).
    - Remove ignore-new_gcc_warnings.diff introduced in the NMU, as the code
      that it patches is no longer there.
  * The source package needs to be repackaged to comply with the DFSG, so
    adding .dfsg to the version. Note we can't use +dfsg because the build
    system doesn't likes it.
